--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,22 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        
       - name: Install Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: pre-release
+          
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.2.0'
+
+      - name: Install R Dependencies
+        uses: r-lib/actions/setup-renv@v2
+        with:
+          cache-version: 1
+          
       - name: Build
         shell: bash
         run: |
@@ -38,12 +50,15 @@ jobs:
           else
             quarto render --output-dir _site
           fi
+          
       - name: Configure GitHub Pages
         uses: actions/configure-pages@v5
+        
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: "_site"
+          
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v4
