--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,8 +14,9 @@ website:
 format:
   html:
     grid:
+      body-width: 1000px
       margin-width: 50px
-      sidebar-width: 50px
+      sidebar-width: 100px
     theme: 
       - cosmo
       - custom.scss
