--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,12 @@ project:
   type: website
 
 website:
-  title: "TKF - Wiki"
+  title: "Wiki"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      # - about.qmd
   sidebar:
     contents: auto
 
